# mexc-rust-sdk2

./: Cargo.toml
src/: account.rs  lib.rs  market.rs  orders.rs  testing.rs  utils.rs
src/futures/: mod.rs  structures.rs
