[package]
name = "mexc-rust-sdk"
version = "0.6.1"
edition = "2021"
description = "An unofficial library for interacting with the Mexc API"
license = "MIT OR Apache-2.0"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
hmac = "0.12.1"
anyhow = "1.0.86"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread","full"] }
serde = { version = "1.0.203", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"
serde_json = "1.0.117"
url = "2.5.0"
